--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -26,8 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:text="About App"
-        android:textSize="20dp"
+        android:text="האפליקציה MyRecipe היא אפליקציית מתכונים שפיתחתי במסגרת פרויקט גמר. מטרת האפליקצייה היא לאגד מס' אלמנטים מרכזיים שנחוצים במלאכות הבישול והאפייה במקום אחד, כך שהמשתמש יוכל לגשת אליהן בקלות ולא יצטרך לחפש במקורות שונים מידע או שירותים הנחוצים לו. האפליקצייה מאפשרת למשתמשים לעיין במתכונים, להעלות מתכונים חדשים, להוסיף מתכונים למועדפים (עבור גישה קלה יותר), לשים התראה בטלפון עבור מתכונים שמצריכים דיוק בזמנים או אפייה, גישה מהיר עבור מתכון שהמשתמש מבשל כרגע והתייעצות עם בינה מלאכותית על מנת לעזור למשתמש לקבל מענה על צרכיו האישיים. "
+        android:textSize="18dp"
+        android:padding="15dp"
         android:gravity="center"
         android:paddingTop="16dp" />
 
