--- a/app/src/main/res/layout/activity_first_screen.xml
+++ b/app/src/main/res/layout/activity_first_screen.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tvMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Recipes"
+        android:text="MyRecipe"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="60sp" />
